# CryptoCWK

./: .gitignore  AffineSolution.cpp  AffineSolution.h  Arg.cpp  Arg.h  CMakeLists.txt  GeneticSolverTests.cpp  Helper.cpp  Helper.h  LetterCount.cpp  LetterCount.h  LetterFrequency.cpp  LetterFrequency.h  Main.cpp  MainAffine.cpp  MainDecrypt.cpp  MainHillTest.cpp  MainShift.cpp  MainTest.cpp  MainVigenere.cpp  MonoSolution.cpp  MonoSolution.h  MonoSubstitutionSolver.cpp  MonoSubstitutionSolver.h  MonoSubstitutionSolverTests.cpp  PolySubstitutionSolver.cpp  PolySubstitutionSolver.h  PolySubstitutionSolverTests.cpp  README.md  Text.cpp  Text.h  TextTests.cpp  Util.cpp  Util.h  UtilTests.cpp  VigenereSolution.cpp  VigenereSolution.h  catch.hpp  stats.h
Debug/: crypto_cwk  sources.mk
Debug/main/: Main.d  subdir.mk
Debug/src/: Text.d  subdir.mk
Test/: crypto_cwk  sources.mk
Test/src/: subdir.mk
Test/tests/: Main.d  subdir.mk
exe/: CMakeLists.txt
exe/src/: Main.cpp  Text.cpp
main/: Main.cpp
src/: Text.cpp  Text.h
tests/: Main.cpp
text/: affine.txt  c1.txt  c2.txt  c3.txt  c4.txt  c5.txt  c6.txt  c7.txt  cipher.txt  original.txt  out_affine.txt  out_vigenere.txt  plain-vigenere.txt  plain.txt  plain2.txt  turing.txt  v2.txt  v3.txt  v4.txt  vigenere.txt
